@@ -1,0 +1,42 @@
+package com.agh.hydra.config;
+
+import com.agh.hydra.core.auth.filter.BearerFilter;
+import com.agh.hydra.core.auth.filter.LoginFilter;
+import lombok.RequiredArgsConstructor;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
+import org.springframework.context.annotation.Bean;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+
+import java.util.List;
+
+@RequiredArgsConstructor
+@EnableWebSecurity
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+
+    private final LoginFilter loginFilter;
+    private final BearerFilter bearerFilter;
+
+    @Override
+    public void configure(HttpSecurity http) throws Exception {
+        http.csrf().disable().authorizeRequests()
+                .anyRequest().permitAll();
+    }
+
+    @Bean
+    public FilterRegistrationBean loginRegistrationBean() {
+        FilterRegistrationBean<LoginFilter> filterRegistrationBean = new FilterRegistrationBean<>();
+        filterRegistrationBean.setFilter(loginFilter);
+        filterRegistrationBean.setUrlPatterns(List.of("/auth/login/*"));
+        return filterRegistrationBean;
+    }
+
+    @Bean
+    public FilterRegistrationBean bearerRegistrationBean() {
+        FilterRegistrationBean<BearerFilter> filterRegistrationBean = new FilterRegistrationBean<>();
+        filterRegistrationBean.setFilter(bearerFilter);
+        filterRegistrationBean.setUrlPatterns(List.of("/*"));
+        return filterRegistrationBean;
+    }
+}
