@@ -35,5 +35,6 @@ mybatis:
 logging:
   level:
     org.springframework: INFO
+    com.agh.hydra: DEBUG
 
 
