@@ -1,0 +1,6 @@
+package com.agh.hydra.common.model;
+
+public enum AuthenticationProvider {
+
+    GOOGLE;
+}
