@@ -1,0 +1,7 @@
+package com.agh.hydra.core.auth;
+
+public class InvalidTokenException extends RuntimeException {
+  public InvalidTokenException(String message) {
+    super(message);
+  }
+}
